# composite-pattern

./: CMakeLists.txt  add.hpp  base.hpp  div.hpp  main.cpp  mult.hpp  negOpMock.hpp  op.hpp  op_test.hpp  pow.hpp  rand.hpp  sevenOpMock.hpp  sub.hpp  twoDigOpMock.hpp  zeroOpMock.hpp
